--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@faker-js/faker": "^6.0.0-alpha.7",
+    "@faker-js/faker": "6.0.0-alpha.7",
     "@testing-library/jest-dom": "5.16.2",
     "@testing-library/react": "12.1.3",
     "@testing-library/user-event": "13.5.0",
@@ -13,6 +13,7 @@
     "@types/react-dom": "17.0.11",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-query": "3.34.16",
     "react-scripts": "5.0.0",
     "styled-components": "5.3.3",
     "typescript": "4.5.5"
@@ -40,9 +41,10 @@
     ]
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.4.0",
-    "autoprefixer": "^10.4.2",
-    "postcss": "^8.4.7",
-    "tailwindcss": "^3.0.23"
+    "@tailwindcss/forms": "0.4.0",
+    "autoprefixer": "10.4.2",
+    "msw": "0.38.1",
+    "postcss": "8.4.7",
+    "tailwindcss": "3.0.23"
   }
 }
