--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "17.0.21",
     "@types/react": "17.0.39",
     "@types/react-dom": "17.0.11",
+    "date-fns": "2.28.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-query": "3.34.16",
