--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-query": "3.34.16",
     "react-scripts": "5.0.0",
     "styled-components": "5.3.3",
+    "typeface-roboto": "^1.1.13",
     "typescript": "4.5.5"
   },
   "scripts": {
